<resources>
    <string name="app_menu_title">Visita Virtual</string>
    <string name="app_menu_subtitle">Universidad Central \"Marta Abreu\" de las Villas</string>
    <string name="app_menu_subtitle_menu">Univ. Central de las Villas</string>
    <string name="app_facultades">Facultades</string>
    <string name="app_name">Visita Virtual a la UCLV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Acerca de</string>
    <string name="action_lenguage">Idioma</string>
    <string name="dialog_credit_title">INFORMACIÓN</string>
    <string name="dialog_credit_realizadopor">Realizado por:</string>
    <string name="dialog_credit_departamento">Departamento de Tecnología Educativa</string>
    <string name="dialog_idioma_title">Seleccionar Idioma</string>
    <string name="dialog_idioma_espannol">Español</string>
    <string name="dialog_idioma_ingles">Inglés</string>
    <string name="title_activity_fie">Facultad de Ingienería Eléctrica (FIE)</string>
    <string name="title_toast_fie">Facultad de Ingienería Eléctrica (FIE)</string>
    <string name="title_activity_fie_menu">Fac. Ing. Eléctrica (FIE)</string>
    <string name="large_text_fie">
        "La Escuela de Ing. Eléctrica se crea como parte de la Facultad de Ingeniería de la Universidad Central \"Marta Abreu\" de Las Villas. Las actividades docentes se inician el 30 de Noviembre de 1959, con las especialidades de  Electroenergética y Electrónica. En el año l960 la Facultad de Ingeniería pasa a nombrarse como  \"Facultad de Tecnología\"."
        "\n""\n"
        "A partir del curso 1976-1977, es que formalmente nace la actual Facultad de Ing. Eléctrica, contando entonces con tres especialidades: Control Automático, Equipos y Componentes Electrónicos y Electroenergética."
        "\n""\n"
        "En la actualidad cuenta con las carreras de Control automático, Eléctrica y Telecomunicaciones y Electrónica."
        </string>
    <string name="title_activity_fie_ing_tele">
        "<b>Ingeniería en Telecomunicaciones y Electrónica</b>"
        </string>
    <string name="text_activity_fie_ing_tele">
        "Los sistemas de telecomunicación que permiten la transmisión de la información, utilizando las técnicas más apropiadas, serán tu objeto de trabajo fundamental. Por el desarrollo alcanzado, la electrónica está presente en todas las ramas de la ciencia, la técnica y, en particular, en las telecomunicaciones, siendo de vital importancia su estudio y conocimiento para tu futuro desempeño profesional."
        </string>
    <string name="title_activity_fie_ing_automatica">
        "<b>Ingeniería en Automática</b>"
        </string>
    <string name="text_activity_fie_ing_automatica">
        "Hoy, el nivel de desarrollo industrial de una nación no sólo se mide por el número de industrias sino por las técnicas empleadas en ellas. Son partes fundamentales de la automatización, la instrumentación y los sistemas de control utilizados, estrechamente ligados a todo lo relacionado con la computación y, en particular, con el hardware de las máquinas computadoras. El ingeniero en Automática tiene como labor principal la explotación de los sistemas de instrumentación y control."
        </string>
    <string name="title_activity_fie_ing_electrica">
        "<b>Ingeniería Eléctrica</b>"
        </string>
    <string name="text_activity_fie_ing_electrica">
        "Los medios electrotécnicos (equipos, instalaciones y sistemas) empleados en la generación, transmisión, distribución y utilización de la energía eléctrica, son parte fundamental de tu objeto de trabajo como profesional. Las actividades más importantes que realizarás como ingeniero eléctrico son: la proyección, explotación, selección y reparación de plantas generadoras de energía, redes eléctricas de cualquier nivel de voltaje considerando también las subestaciones eléctricas, medios de protección de sistemas electro-energéticos y accionamientos eléctricos de cargas mecánicas industriales."
        </string>
    <string name="title_activity_fie_lic_electrica">
        "<b>Licenciatura en Educación Eléctrica</b>"
        </string>
    <string name="text_activity_fie_lic_electrica">
        "La Licenciatura en Educación Eléctrica garantiza la formación de profesores para trabajar en los centros de la Educación Técnica y Profesional."
    </string>
    <string name="title_activity_fqf">Facultad de Química Farmacia (FQF)</string>
    <string name="title_activity_fqf_menu">Fac. Química Farmacia (FQF)</string>
    <string name="title_activity_fce_menu">Fac. Ciencias Económicas (FCE)</string>
    <string name="title_activity_fmfc_menu">Fac. Mat. Física Computación (FMFC)</string>
    <string name="large_text_fh">
        "La  Facultad de Humanidades, comienza la tradición de los estudios humanísticos en este centro, al funcionar desde su primer curso académico, las Escuelas de Filosofía y Letras y de Idiomas Modernos, en la Sección correspondiente a los estudios de idioma ingles."
        "\n""\n"
        "A partir de entonces varios planes y programas de estudio y diferentes estructuras institucionales se han producido en el área de los estudios humanísticos en nuestra universidad, aunque el claustro y la carrera de Letras se han mantenido como núcleo central de toda esta actividad universitaria. La Facultad ha adoptado distintas denominaciones de acuerdo a su estructura y funciones."
        "\n""\n"
        "La Facultad de Humanidades  en mas de cincuenta años de ininterrumpida  labor como unidad académica universitaria, ha creado un sistema de formación y desarrollo en el área humanística en el contexto universitario, de significativa contribución en el conocimiento y transformación socio-cultural de nuestra nación cubana y muy particularmente de las actuales provincias centrales de Cuba."
        "\n""\n"
        "La Facultad de Humanidades tiene como misión formar a los profesionales de Letras, Lengua Inglesa, Comunicación Social y Periodismo de la región central de Cuba."
        </string>
    <string name="title_activity_fh_lic_letras">
        "<b>Licenciaturas en Letras</b>"
        </string>
    <string name="text_activity_fh_lic_letras">
        "Como profesional de las letras deberás poseer vastos conocimientos en el campo de la cultura con especial énfasis en la literatura y la lingüística. Serás un promotor cultural que indaga en su lengua y en la literatura nacional, sin perder los vínculos con las lenguas clásicas y la literatura universal."
        </string>
    <string name="title_activity_fh_lic_lenguas">
        "<b>Licenciaturas en Lengua Inglesa</b>"
        </string>
    <string name="text_activity_fh_lic_lenguas">
        "Si piensas seleccionar esta carrera debes tener aptitudes para el aprendizaje de lenguas extranjeras y un buen dominio de la lengua española. Durante su estudio desarrollarás de manera armónica e integral las cuatro habilidades básicas de la actividad verbal: expresión oral, expresión escrita, comprensión de lectura y comprensión auditiva, que te permitan desarrollar las habilidades profesionales necesarias para la utilización de dicha lengua."
        </string>
    <string name="title_activity_fh_lic_comunicacion">
        "<b>Comunicación Social</b>"
        </string>
    <string name="text_activity_fh_lic_comunicacion">
        "El comunicador social está dotado de una formación integral en que lo técnico, político, económico y cultural le permiten perfeccionar los procesos de comunicación en las diferentes organizaciones de masas y políticas, empresas, y en instituciones y comunidades. La influencia que puede tener un mensaje en los diferentes ámbitos y el lograr que llegue a todos, que permita su descodificación es una de las tareas que resulta de vital importancia en la actualidad."
        </string>
    <string name="title_activity_fh_lic_periodismo">
        "<b>Periodismo</b>"
        </string>
    <string name="text_activity_fh_lic_periodismo">
        "El periodismo abarca un campo particular de la comunicación que incluye el proceso de producción, difusión e intercambio de información entre los hombres .Para ejercer esta profesión debes vivir muy al tanto de los problemas de tu tiempo, como autor y protagonista de los grandes acontecimientos que se viven actualmente en el mundo. Tu formación como periodista exige una rigurosa preparación desde el punto de vista político, ideológico, cultural y técnico-profesional, que te capacite para el desarrollo de tareas específicas en la organización y movilización de las masas."
    </string>
    <string name="title_activity_fca_menu">Fac. Ciencias Agropecuarias (FCA)</string>
    <string name="large_text_fca">
        Los estudios de la Medicina Veterinaria en Cuba se iniciaron el 10 de Abril de 1907 en La Habana y en 1962 en la Universidad Central de Las Villas. Hoy la Carrera se denomina de Medicina Veterinaria y Zootecnia porque incorporó la producción animal como elemento consustancial del modelo profesional de la misma."
        "\n"
        "La actual facultad incluye las carreras de Agronomía, Biología, Ingeniería Agrícola y Medicina Veterinaria y Zootecnia, además cuenta con el Centro de Investigaciones Agropecuarias (CIAP) y con el Jardín Botánico."
        </string>
    <string name="title_activity_fca_lic_agronomia">
        "<b>Licenciatura en Agronomía</b>"
        </string>
    <string name="text_activity_fca_lic_agronomia">
        "La dirección de la producción agropecuaria que tiene como objetivo la obtención de alimentos y materias primas tanto de origen vegetal como animal, constituye una de las principales tareas que llevarás a cabo como profesional. Estarás capacitado para ejercer la dirección integral del proceso de producción, logrando el máximo rendimiento por unidad de área, la mayor calidad y el menor costo en las condiciones específicas década lugar. La ciencia agropecuaria se apoya en las ciencias exactas, biológicas y técnicas, así como en la economía, la planificación, la cibernética y otras."
        </string>
    <string name="title_activity_fca_lic_biologia">
        "<b>Licenciatura en Biología</b>"
        </string>
    <string name="text_activity_fca_lic_biologia">
        "Realizarás estudios no sólo de los seres vivos, sino también de los fundamentos químicos, químico-físicos y físicos de los mecanismos y procesos biológicos. El estudio de los seres vivos, plantas y animales, tanto en su medio natural como en condiciones controladas de laboratorio, son actividades propias de esta profesión."
        </string>
    <string name="title_activity_fca_ing_agricola">
        "<b>Ingeniería Agrícola</b>"
        </string>
    <string name="text_activity_fca_ing_agricola">
        ""
        </string>
    <string name="title_activity_fca_lic_veterinaria">
        "<b>Licenciatura en Medicina Veterinaria y Zootecnia</b>"
        </string>
    <string name="text_activity_fca_lic_veterinaria">
        "Garantizar la salud animal y el proceso productivo son actividades para las cuales te encuentras preparado como médico veterinario, con el objetivo de lograr alimentos de alta calidad biológica y sanitaria con la máxima economía. Otro aspecto de interés para esta profesión es la prevención de las enfermedades, por lo que debe mantenerse un control estricto en nuestras fronteras oficiales, puertos y aeropuertos, impidiendo la entrada de enfermedades que no se padecen en nuestro territorio nacional."
    </string>
    <string name="title_activity_fc_menu">Fac. Construcciones (FC)</string>
    <string name="title_activity_fhcs">Fac. Humanidades - Ciencias Sociales</string>
    <string name="title_activity_fimifq">Fac. Ing. Mec. e Industrial - Quím. Farmacia</string>
    <string name="app_galeria">Galería</string>
    <string name="title_mostrar">Mostrar imágenes</string>
</resources>