<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytLayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@android:style/TextAppearance.Widget.PopupMenu.Large"
    tools:theme="@style/AlertDialog.AppCompat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_credit_title"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/dialog_credit_realizadopor"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_credit_departamento"
        android:textColor="#000000"
        android:textSize="20sp" />

    <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Programador:"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sergio R. Pérez León"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:gravity="center" / -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="UCLV-2019"
        android:textColor="#000000" />

</LinearLayout>
